# fpl-agent

./: .env.bedrock  .env.example  .gitignore  AWS_BEDROCK_SETUP.md  LLM_SETUP.md  QUICKSTART_BEDROCK.md  README.md  agent.py  example.py  requirements.txt  setup_bedrock.sh  test_ft_calculation.py
agentcore/: README.md  agentcore.yaml  agentcore_requirements.txt
agentcore/fpl-agentcore/: .gitignore  pyproject.toml
agentcore/fpl-agentcore/src/: fpl_client.py  main.py
agentcore/fpl-agentcore/src/tools/: captain_tools.py
api_tests/: 1_bootstrap_static.py  2_team_info.py  3_team_picks.py  4_team_history.py  5_team_transfers.py  6_player_summary.py  7_fixtures.py  README.md
tools/: player_analysis.py  team_tools.py  transfer_tools.py
